Html: fixed typos in pages fix layout issues by adding header and footer inside body element used regex validation for modalbox email

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     />
     <link rel="stylesheet" href="css/all.min.css">
    </head>
- <header>
+ <body id="indexpage">
+   <header>
     <nav>
         <div class="nav-center">
                 <!-- navigation header -->
@@ -76,13 +77,11 @@
 
     </nav>
  </header>
- <body id="indexpage">
-  
  <!-- Main section -->
    <main class="main"> 
     <div id="overlay" class="hidden">
       <div id="modalBox" >
-        <button type="button" class="closeModal">&times</button>
+        <button type="button" class="closeModal">&times;</button>
         <div class="overlayContent">
           <h2>Join our newsletter</h2>
           <p>We'd love to send you latest updates to your inbox.</p>
@@ -99,7 +98,7 @@
        <div class="container">
         <h1>Helping Small Businesses and Individual Build Websites That Work</h1>
 
-        <p class="p">Stop struggling with websites that are slow, confusing, or just <q>pretty</q>? <br> I create functional easy to manage sites that grow with your goals, whether you want to teach, sell, or streamline your business operations.</p>
+        <p class="p">Stop struggling with websites that are slow, confusing, or just <q>pretty</q> <br> I create functional easy to manage sites that grow with your goals, whether you want to teach, sell, or streamline your business operations.</p>
         <div class="btns">
 <a href="/pages/contact.html" class="btn">Get Your Websites<!--  or Consultation --></a>
 <a href="/pages/services.html" class="btn">Explore Services</a>
@@ -225,8 +224,7 @@
       </section>
    </main>
        <a href="#" class="topScrollBtn" id="topScrollBtn"> &UpArrow;</a>
- </body>
-   <!-- footer -->
+        <!-- footer -->
    <footer> 
     <div class="linksContainer">
     <address>
@@ -285,4 +283,6 @@
   </footer>
     <!-- Javascript -->
 <script src="script.js"></script>
+ </body>
+  
 </html>
