--- a/pages/services.html
+++ b/pages/services.html
@@ -18,7 +18,9 @@
     />
     <link rel="stylesheet" href="css/all.min.css">
    </head>
- <header>
+
+ <body>
+   <header>
     <nav>
         <div class="nav-center">
                 <!-- navigation header -->
@@ -77,8 +79,6 @@
 
     </nav>
  </header>
- <body>
-  
   
  <!-- Main section -->
    <main class="main">
@@ -93,7 +93,7 @@
     <section class="section-container">
       <article class="review">
         <!-- web dev -->
-        <span>
+        <div>
           <h2>web development services</h2>
           <h3><b>Build a Website That Works, Not Just One That Looks Good</b></h3>
           <p>A website should help you grow, not frustrate you. I build fast, functional, and easy-to-manage websites that support your goals from day one.</p>
@@ -123,10 +123,10 @@
             </ul>
           </div>
           <a href="/pages/contact.html">start your web project</a>
-        </span>
+        </div>
         <!-- graphic services -->
-        <span>
-          <h2>graphic Design Services</h2>
+        <div>
+          <h2>Graphic Design Services</h2>
           <h3><b>Simple, Clean Design That Builds Trust</b></h3>
           <p>Design is not about decoration. It is about clarity. I design products that look professional, guide users naturally, and support conversions.</p>
 
@@ -155,13 +155,13 @@
             </ul>
           </div>
           <!-- cta -->
-          <a href="/pages/contact.html">Get a Custom graphic Design</a>
-        </span>
+          <a href="/pages/contact.html">Get a Custom Graphic Design</a>
+        </div>
         <!-- teaching services -->
-         <span>
+         <div>
           <h2>Teaching Web Development & Computer Skills</h2>
           <h3>Learn Skills You Can Use Immediately</h3>
-          <p>I teach web development and computer basics in a practical, beginner friendly way.No theory overload. Just skills that make sense.</p>
+          <p>I teach web development and computer basics in a practical, beginner-friendly way. No theory overload. Just skills that make sense.</p>
           <h4>What this service solves</h4>
           <ul>
             <li>You want to learn web development but feel overwhelmed</li>
@@ -183,9 +183,9 @@
   <li>How to think clearly when solving tech problems</li>
 </ul>
 	<a href="/pages/contact.html">Start Learning With Me</a>
-         </span>
+         </div>
          <!-- unknown services -->
-          <span>
+          <div>
             <h3>Not Sure Which Service You Need?</h3>
             <p>That’s normal. Many clients start with a simple conversation. I will help you figure out the best solution based on your goals, budget, and timeline.</p>
             <a href="/pages/contact.html">Contact Me for a Consultation</a>
@@ -200,7 +200,7 @@ You will always get:
 	•	Respect for your time and goals 
 
 No confusion. No pressure. Just help that works. -->
-          </span>
+          </div>
 
  </article>
     </section>
@@ -220,8 +220,7 @@ No confusion. No pressure. Just help that works. -->
      </section>
    </main>
        <a href="#" class="topScrollBtn"> &UpArrow;</a>
- </body>
-
+       
    <!-- footer -->
    <footer> 
     <!-- footer nav links -->
@@ -270,4 +269,6 @@ No confusion. No pressure. Just help that works. -->
     </footer>
     <!-- Javascript -->
 <script src="/script.js"></script>
+ </body>
+
 </html>
