changed photo in index and about page

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
       <article class="review">
         <div id="img-container">
-          <img src="images/marveey.jpg" id="person-img" alt="Service User" width="150px" height="150px">
+          <img src="images/cameraman.jpg" id="person-img" alt="Service User" width="150px" height="150px">
         </div>
         <h4 id="author">Tony Doe</h4>
         <p id="job">One way Dispatch</p>
