--- a/pages/about.html
+++ b/pages/about.html
@@ -90,7 +90,7 @@
         <p>My goal is simple: provide practical digital solutions that are easy to use, effective, and built to last.</p>
          </div>
          <div>
-          <img src="/images/me.jpg" alt="my picture" id="aboutImg">
+          <img src="/images/guywalking.jpg" alt="my picture" id="aboutImg">
          </div>
     </section>
     <section class="section-container">
