feat: made adjustment on desktop layout style

--- a/pages/about.html
+++ b/pages/about.html
@@ -93,29 +93,30 @@
           <img src="/images/guywalking.jpg" alt="my picture" id="aboutImg">
          </div>
     </section>
-    <section class="section-container">
-      <div>
+    <section class="section-container" id="mission-section">
+      <div class="mission whoiam">
         <h2>who i am</h2>
         <p>
           I help people turn ideas into functional websites, learn digital skills quickly, and fix tech problems that slow them down. 
         </p>
         <p>Whether you want a new website, practical lessons in web development, or office tech support, I make technology <b>clear, manageable, and result-driven.</b></p>
       </div>
-      <div>
+      <div  class="mission mymission">
         <h2>my mission</h2>
         <p>
-          To empower people with tools, websites, and knowledge that <b>actually work</b>, so they can focus on growth and success without frustration.
+          To empower people with tools, right skills, websites, and knowledge that <b>actually work</b> and and is<b>very fulfilling.</b> so they can focus on growth and success without frustration.
         </p>
         <p>
           I believe <b>technology should enable you, not become another barrier you have to face.</b>
         </p>
       </div>
-      <div>
+      <div  class="mission myvision">
         <h2>my vision</h2>
         <p>
           A world where anyone, students, entrepreneurs, or professionals can confidently use technology to <b>build, teach, and grow</b>, without being held back by technical roadblocks.
         </p>
       </div>
+      
     </section>
      <section class="section-container">
       <article class="review">
