--- a/pages/services.html
+++ b/pages/services.html
@@ -82,18 +82,18 @@
   
  <!-- Main section -->
    <main class="main">
-    <section class="hero">
-       <div class="container loopdiv">
+    <section id="serviceshero" class="hero">
+       <div class="container loopdiv ">
        <h1>web development, graphic design & practical tech services</h1>
-       <p>I provide <b>clear, reliable tech services</b> designed to solve real problems. <br>Whether you need a professional website, want to learn digital skills, or need everyday tech support, my focus is simple: results that make your work easier.
+       <p>I provide <b>clear, reliable tech services</b> designed to solve real problems. <br>Whether you need a professional website, want to learn digital skills, or need everyday tech support, <br> my focus is simple: <b>results that make your work easier.</b> 
        </p>
          </div>
     </section>
 
-    <section class="section-container">
-      <article class="review">
+    <section class="section-container" id="servicesSection">
+      <article class="review" id="sectionreview">
         <!-- web dev -->
-        <div>
+        <div class="service webdev">
           <h2>web development services</h2>
           <h3><b>Build a Website That Works, Not Just One That Looks Good</b></h3>
           <p>A website should help you grow, not frustrate you. I build fast, functional, and easy-to-manage websites that support your goals from day one.</p>
@@ -106,7 +106,7 @@
               <li>You want something professional without unnecessary complexity</li>
             </ul>
           </div>
-          <div  class="serviceGridCard">
+           <div  class="serviceGridCard">
             <h4>Who this is for</h4>
             <ul>
               <li>Small business owners</li>
@@ -122,10 +122,10 @@
               <li>Anyone launching a new idea online</li>
             </ul>
           </div>
-          <a href="/pages/contact.html">start your web project</a>
+          <a href="/pages/contact.html" class="servicelink">start your web project</a>
         </div>
         <!-- graphic services -->
-        <div>
+        <div  class="service graphic">
           <h2>Graphic Design Services</h2>
           <h3><b>Simple, Clean Design That Builds Trust</b></h3>
           <p>Design is not about decoration. It is about clarity. I design products that look professional, guide users naturally, and support conversions.</p>
@@ -155,10 +155,10 @@
             </ul>
           </div>
           <!-- cta -->
-          <a href="/pages/contact.html">Get a Custom Graphic Design</a>
+          <a href="/pages/contact.html" class="servicelink">Get a Custom Graphic Design</a>
         </div>
         <!-- teaching services -->
-         <div>
+         <div  class="service teaching">
           <h2>Teaching Web Development & Computer Skills</h2>
           <h3>Learn Skills You Can Use Immediately</h3>
           <p>I teach web development and computer basics in a practical, beginner-friendly way. No theory overload. Just skills that make sense.</p>
@@ -182,13 +182,13 @@
   <li>HTML, CSS, and web fundamentals</li>
   <li>How to think clearly when solving tech problems</li>
 </ul>
-	<a href="/pages/contact.html">Start Learning With Me</a>
+	<a href="/pages/contact.html" class="servicelink">Start Learning With Me</a>
          </div>
          <!-- unknown services -->
-          <div>
+          <div  class="service unknown">
             <h3>Not Sure Which Service You Need?</h3>
             <p>That’s normal. Many clients start with a simple conversation. I will help you figure out the best solution based on your goals, budget, and timeline.</p>
-            <a href="/pages/contact.html">Contact Me for a Consultation</a>
+            <a href="/pages/contact.html" class="servicelink">Contact Me for a Consultation</a>
 
 <!-- 
 Trust Reassurance Section
